<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/sunny_background"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="30dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/search_view_shape"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="Search for a city"
        app:searchIcon="@drawable/search_icon" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"

        app:layout_constraintEnd_toEndOf="@+id/searchView"
        app:layout_constraintStart_toStartOf="@+id/searchView"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/text_style_medium"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/location" />

        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cityNameText"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/text_style_medium"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="116dp"

        android:fontFamily="@font/text_style_bold"
        android:text="@string/today"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/sun"

        app:layout_constraintEnd_toStartOf="@+id/temp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/text_style_semibold"
        android:text="@string/degree"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/text_style_regular"
        android:text="@string/sunny"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />

    <TextView
        android:id="@+id/max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/text_style_regular"
        android:text="@string/maxTemp"
        android:textColor="@color/black"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather" />

    <TextView
        android:id="@+id/min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/text_style_regular"
        android:gravity="bottom"
        android:text="@string/minTemp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/max"
        app:layout_constraintStart_toStartOf="@+id/max"
        app:layout_constraintTop_toBottomOf="@+id/max" />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/text_style_bold"
        android:text="@string/dayText"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/min"
        app:layout_constraintStart_toStartOf="@+id/min"
        app:layout_constraintTop_toBottomOf="@+id/min" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/text_style_regular"
        android:text="@string/dateText"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/day"
        app:layout_constraintStart_toStartOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:constraint_referenced_ids="linearLayout1,linearLayout2,linearLayout3,linearLayout4,linearLayout5,linearLayout6"
                app:flow_maxElementsWrap="3"
                app:flow_wrapMode="chain"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/background_shape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/contentDescription"
                    app:srcCompat="@drawable/humidity" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/text_style_medium"
                    android:gravity="center"
                    android:text="@string/humidity"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/text_style_medium"
                    android:gravity="center"
                    android:text="@string/humidityText"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/background_shape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/contentDescription"
                    app:srcCompat="@drawable/wind" />

                <TextView
                    android:id="@+id/windSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/text_style_medium"
                    android:gravity="center"
                    android:text="@string/windSpeed"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/text_style_medium"
                    android:gravity="center"
                    android:text="@string/windSpeedText"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/background_shape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/contentDescription"
                    app:srcCompat="@drawable/conditions" />

                <TextView
                    android:id="@+id/condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/text_style_medium"
                    android:gravity="center"
                    android:text="@string/sunny"
                    android:textAllCaps="true"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/text_style_medium"
                    android:gravity="center"
                    android:text="@string/condition"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/background_shape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/contentDescription"
                    app:srcCompat="@drawable/sunrise" />

                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/text_style_medium"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/text_style_medium"
                    android:gravity="center"
                    android:text="@string/sunrise"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/background_shape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/contentDescription"
                    app:srcCompat="@drawable/sunset" />

                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/text_style_medium"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/text_style_medium"
                    android:gravity="center"
                    android:text="@string/sunset"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/background_shape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/contentDescription"
                    app:srcCompat="@drawable/sea" />

                <TextView
                    android:id="@+id/sea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/text_style_medium"
                    android:gravity="center"
                    android:text="@string/pressure"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/text_style_medium"
                    android:gravity="center"
                    android:text="@string/seaText"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/design_by"
        android:textColor="@color/white"
        android:textSize="10sp"
        tools:ignore="SmallSp"

        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>